<?xml version="1.0" encoding="utf-8"?>

<!-- Root Constraint Layout -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flag5">

    <ImageView
        android:id="@+id/login_back_imgview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="#80ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/blank_image" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/logo_height_width"
        android:layout_height="@dimen/logo_height_width"
        android:src="@mipmap/ic_logo"
        android:transitionName="applogo"
        android:contentDescription="@string/blank_image"
        app:layout_constraintBottom_toTopOf="@+id/login_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_back_imgview"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Cardview -->
    <android.support.v7.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start_end"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:layout_marginEnd="@dimen/cardview_margin_start_end"
        android:padding="@dimen/cardView_padding"
        app:cardCornerRadius="@dimen/cardView_corner_radius"
        app:cardElevation="@dimen/cardView_elevation"
        app:layout_constraintBottom_toTopOf="@+id/login_acc_txt"
        app:layout_constraintEnd_toEndOf="@+id/login_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_logo">

        <!-- Constraint layout of cardview-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_sub_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/All_Side_Padding">

            <!-- Email ID -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/constraint_margin_top"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_sub_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/login_user_hint"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_pwd"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_sub_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_reg_key"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <!-- Remember me checkbox-->
            <CheckBox
                android:id="@+id/login_chkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:checked="false"
                app:layout_constraintEnd_toEndOf="@+id/login_pwd"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/login_pwd"
                app:layout_constraintTop_toBottomOf="@+id/login_pwd" />

            <!-- forgot password textview -->
            <TextView
                android:id="@+id/login_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_txt"
                app:layout_constraintEnd_toEndOf="@+id/login_chkbox"
                app:layout_constraintStart_toStartOf="@+id/login_chkbox"
                app:layout_constraintTop_toBottomOf="@+id/login_chkbox" />

            <!-- Login Button -->
            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/constraint_margin_top"
                android:background="@drawable/btn_design1"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/login_pwd"
                app:layout_constraintStart_toStartOf="@+id/login_pwd"
                app:layout_constraintTop_toBottomOf="@+id/login_forgot_pwd"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/login_acc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:text="@string/account_message"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_register"
        app:layout_constraintEnd_toEndOf="@+id/login_cardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_cardView"
        app:layout_constraintTop_toBottomOf="@+id/login_cardView" />

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:background="@drawable/btn_design1"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_acc_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_acc_txt"
        app:layout_constraintTop_toBottomOf="@+id/login_acc_txt" />

</android.support.constraint.ConstraintLayout>