<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regback1">

    <ImageView
        android:id="@+id/forgot_back_imgview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_background_imgview_hight"
        android:contentDescription="@string/blank_image"
        android:scaleType="centerCrop"
        android:src="@drawable/back6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_txt"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgot_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/forgot_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txtview_disc_margin_start_end"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:layout_marginEnd="@dimen/txtview_disc_margin_start_end"
        android:text="@string/forgot_password_info"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgot_cardView"
        app:layout_constraintEnd_toEndOf="@+id/forgot_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/forgot_txt"
        app:layout_constraintTop_toBottomOf="@+id/forgot_txt" />

    <android.support.v7.widget.CardView
        android:id="@+id/forgot_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start_end"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:layout_marginEnd="@dimen/cardview_margin_start_end"
        app:cardCornerRadius="@dimen/cardView_corner_radius"
        app:cardElevation="@dimen/cardView_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forgot_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/forgot_description"
        app:layout_constraintTop_toBottomOf="@+id/forgot_description">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/forgot_sub_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/All_Side_Padding">

            <!-- User Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/forgot_email"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/constraint_margin_top"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/forgot_sub_email"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_reg_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_email_hint"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/forgot_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_design1"
                android:layout_marginTop="@dimen/constraint_margin_top"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/forgot_email"
                app:layout_constraintStart_toStartOf="@+id/forgot_email"
                app:layout_constraintTop_toBottomOf="@+id/forgot_email" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>