<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reg_main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flag5">

    <ImageView
        android:id="@+id/reg_back_imgview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/blank_image"
        android:src="#80ffffff"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_back_imgview"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/reg_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txtview_disc_margin_start_end"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:layout_marginEnd="@dimen/txtview_disc_margin_start_end"
        android:text="@string/registration_Info"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_cardView"
        app:layout_constraintEnd_toEndOf="@+id/reg_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/reg_txt"
        app:layout_constraintTop_toBottomOf="@+id/reg_txt" />

    <android.support.v7.widget.CardView
        android:id="@+id/reg_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start_end"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:layout_marginEnd="@dimen/cardview_margin_start_end"
        app:cardCornerRadius="@dimen/cardView_corner_radius"
        app:cardElevation="@dimen/cardView_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reg_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/reg_description"
        app:layout_constraintTop_toBottomOf="@+id/reg_description">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/reg_sub_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/All_Side_Padding">

            <!-- User name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_user"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/constraint_margin_top"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/reg_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_sub_user"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_username_hint"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <!-- User Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_email"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/reg_mobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_user"
                app:layout_constraintVertical_chainStyle="packed">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_sub_email"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_reg_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_email_hint"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <!-- User Mobile -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_mobile"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/reg_pwd"
                app:layout_constraintEnd_toEndOf="@+id/reg_email"
                app:layout_constraintStart_toStartOf="@+id/reg_email"
                app:layout_constraintTop_toBottomOf="@+id/reg_email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_sub_mobile"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:drawableStart="@drawable/ic_reg_phone"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_mobile_no_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!-- User Mobile -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_age"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/reg_pwd"
                app:layout_constraintEnd_toEndOf="@+id/reg_mobile"
                app:layout_constraintStart_toStartOf="@+id/reg_mobile"
                app:layout_constraintTop_toBottomOf="@+id/reg_mobile">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_sub_age"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:maxLength="3"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_enter_age_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_pwd"
                style="@style/coustom_TextInput_Layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/reg_btn_submit"
                app:layout_constraintEnd_toEndOf="@+id/reg_age"
                app:layout_constraintStart_toStartOf="@+id/reg_age"
                app:layout_constraintTop_toBottomOf="@+id/reg_age">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_sub_pwd"
                    style="@style/coustom_TextInput_Layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_reg_key"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/reg_password_hint"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/reg_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_design1"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/reg_pwd"
                app:layout_constraintStart_toStartOf="@+id/reg_pwd"
                app:layout_constraintTop_toBottomOf="@+id/reg_pwd" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <!-- simple message for accounts -->


</android.support.constraint.ConstraintLayout>