<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/All_Side_Padding">

    <TextView
        android:id="@+id/user_txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Edit Your Details Here"
        android:textColor="@color/aqua"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- User name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name"
        style="@style/coustom_TextInput_Layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintEnd_toEndOf="@id/user_txt_msg"
        app:layout_constraintStart_toStartOf="@id/user_txt_msg"
        app:layout_constraintTop_toBottomOf="@+id/user_txt_msg"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_sub_name"
            style="@style/coustom_TextInput_Layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/reg_username_hint"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <!-- User Email -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_email"
        style="@style/coustom_TextInput_Layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/user_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_sub_email"
            style="@style/coustom_TextInput_Layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_reg_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/reg_email_hint"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <!-- User Mobile -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_mobile"
        style="@style/coustom_TextInput_Layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/user_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_sub_mobile"
            style="@style/coustom_TextInput_Layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_reg_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/reg_mobile_no_hint"
            android:inputType="number"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <!-- User Mobile -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_age"
        style="@style/coustom_TextInput_Layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/user_mobile"
        app:layout_constraintStart_toStartOf="@+id/user_mobile"
        app:layout_constraintTop_toBottomOf="@+id/user_mobile">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_sub_age"
            style="@style/coustom_TextInput_Layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/reg_enter_age_hint"
            android:inputType="number"
            android:maxLength="3" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/user_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_design1"
        android:text="s u b m i t"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_age"
        app:layout_constraintStart_toStartOf="@+id/user_age"
        app:layout_constraintTop_toBottomOf="@+id/user_age"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>